--- a/benchmarks/SimpleCDN.Benchmarks.csproj
+++ b/benchmarks/SimpleCDN.Benchmarks.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\tests\mocks\SimpleCDN.Tests.Mocks.csproj" />
-    <ProjectReference Include="..\src\SimpleCDN.csproj" />
+	  <ProjectReference Include="..\src\core\SimpleCDN.csproj" />
   </ItemGroup>
 
 </Project>
