--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,9 @@ version: 2
 updates:
   - package-ecosystem: "nuget" # See documentation for possible values
     directories: # Location of package manifests
-    - "/src"
+    - "/src/core"
+    - "/src/standalone"
+    - "/extensions/redis"
     - "/tests/integration"
     - "/tests/unit"
     - "/tests/mocks"
