--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -80,7 +80,7 @@ jobs:
         uses: docker/build-push-action@v6.11.0
         with:
           context: .
-          file: ./src/Dockerfile
+          file: ./src/standalone/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: ${{ matrix.arch }}
