add license to Redis package

--- a/extensions/Redis/SimpleCDN.Extensions.Redis.csproj
+++ b/extensions/Redis/SimpleCDN.Extensions.Redis.csproj
@@ -17,6 +17,7 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>simplecdn-extension;redis</PackageTags>
 		<IsPackable>true</IsPackable>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -28,6 +29,10 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="StackExchange.Redis" Version="2.8.24" />
 	</ItemGroup>
 
 	<ItemGroup>
