--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
     directories: # Location of package manifests
     - "/src/core"
     - "/src/standalone"
-    - "/extensions/redis"
+    - "/extensions/Redis"
     - "/tests/integration"
     - "/tests/unit"
     - "/tests/mocks"
@@ -18,7 +18,7 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "docker"
-    directory: "/src"
+    directory: "/src/standalone"
     schedule:
       interval: "weekly"
   - package-ecosystem: "github-actions"
