--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,6 +14,8 @@ name: "CodeQL Advanced"
 on:
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+    - "**.md"
   schedule:
     - cron: '43 4 */2 * *'
 
