--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,7 +13,7 @@ name: "CodeQL Advanced"
 
 on:
   pull_request:
-    branches: [ "main", "JonathanBout-patch-1" ]
+    branches: [ "main" ]
     paths-ignore:
     - "**.md"
   schedule:
