Another overhaul of the system (#90)
* Another overhaul of the system

- Static content (icons, css) as embedded Assembly files
- README.md files for both nuget packages
- produce .snupkg for symbols
- more unit tests for MimeTypeHelpers

* Update nuget-publish.yml

* don't need to explicitly add snupkg

* Update README.md to mention proper methods

* remove link header as it isn't used by most browsers and uncomment favicon endpoint in standalone

* Configure on services instead of the applicationbuilder

--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -34,7 +34,8 @@ jobs:
     - name: Pack
       run: dotnet pack --configuration Release --property:Version=${VERSION} --output . src/core/SimpleCDN.csproj
     - name: Push
-      run: dotnet nuget push SimpleCDN.${VERSION}.nupkg --api-key ${NUGET_API_KEY} --source https://api.nuget.org/v3/index.json
+      run: |
+        dotnet nuget push SimpleCDN.${VERSION}.nupkg --api-key ${NUGET_API_KEY} --source https://api.nuget.org/v3/index.json
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
 
@@ -55,6 +56,7 @@ jobs:
     - name: Pack
       run: dotnet pack --configuration Release --property:Version=${VERSION} --output . extensions/Redis/SimpleCDN.Extensions.Redis.csproj
     - name: Push
-      run: dotnet nuget push SimpleCDN.Extensions.Redis.${VERSION}.nupkg --api-key ${NUGET_API_KEY} --source https://api.nuget.org/v3/index.json
+      run: |
+        dotnet nuget push SimpleCDN.Extensions.Redis.${VERSION}.nupkg --api-key ${NUGET_API_KEY} --source https://api.nuget.org/v3/index.json
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
