--- a/src/core/SimpleCDN.csproj
+++ b/src/core/SimpleCDN.csproj
@@ -21,6 +21,8 @@
 		<PackageIcon>logo.png</PackageIcon>
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<IsAotCompatible>true</IsAotCompatible>
+		<EnableRequestDelegateGenerator>true</EnableRequestDelegateGenerator>
 	</PropertyGroup>
 
 	<ItemGroup>
