Remove v prefix from version string

--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -12,6 +12,8 @@ on:
         description: "Package version, e.g. 1.10.5"
         required: true
         type: string
+env:
+  VERSION: ${{ inputs.version_number || github.ref_name }}
 
 jobs:
   publish-core:
@@ -27,12 +29,11 @@ jobs:
       with:
         dotnet-version: "9.0.x"
     - name: Pack
-      run: dotnet pack --configuration Release --property:Version=${VERSION} --output . src/core/SimpleCDN.csproj
-      env:
-        VERSION: ${{ inputs.version_number || github.ref_name }}
+      run: |
+        dotnet pack --configuration Release --property:Version=${VERSION#v} --output . src/core/SimpleCDN.csproj
     - name: Push
       run: |
-        dotnet nuget push SimpleCDN.${VERSION}.nupkg --api-key ${NUGET_API_KEY} --source https://api.nuget.org/v3/index.json
+        dotnet nuget push SimpleCDN.${VERSION#v}.nupkg --api-key ${NUGET_API_KEY} --source https://api.nuget.org/v3/index.json
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
 
@@ -49,11 +50,10 @@ jobs:
       with:
         dotnet-version: "9.0.x"
     - name: Pack
-      run: dotnet pack --configuration Release --property:Version=${VERSION} --output . extensions/Redis/SimpleCDN.Extensions.Redis.csproj
-      env:
-        VERSION: ${{ inputs.version_number || github.ref_name }}
+      run: |
+        dotnet pack --configuration Release --property:Version=${VERSION#v} --output . extensions/Redis/SimpleCDN.Extensions.Redis.csproj
     - name: Push
       run: |
-        dotnet nuget push SimpleCDN.Extensions.Redis.${VERSION}.nupkg --api-key ${NUGET_API_KEY} --source https://api.nuget.org/v3/index.json
+        dotnet nuget push SimpleCDN.Extensions.Redis.${VERSION#v}.nupkg --api-key ${NUGET_API_KEY} --source https://api.nuget.org/v3/index.json
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
