--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,7 +15,15 @@ on:
 
 jobs:
   unit-test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+       include:
+        - runner: "ubuntu-22.04-arm"
+        - runner: "ubuntu-22.04"
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref_name }}-${{ matrix.runner }}
+      cancel-in-progress: true
+    runs-on: ${{ matrix.runner }}
     name: Unit Tests
     steps:
     - uses: actions/checkout@v4
