--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   publish-core:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: read
       packages: write
@@ -27,7 +27,9 @@ jobs:
     - name: Setup Dotnet
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: "9.0.x"
+        dotnet-version: |
+          "8.0.x"
+          "9.0.x"
     - name: Pack
       run: |
         dotnet pack --configuration Release --property:Version=${VERSION#v} --output . src/core/SimpleCDN.csproj
@@ -48,7 +50,9 @@ jobs:
     - name: Setup Dotnet
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: "9.0.x"
+        dotnet-version: |
+          "8.0.x"
+          "9.0.x"
     - name: Pack
       run: |
         dotnet pack --configuration Release --property:Version=${VERSION#v} --output . extensions/Redis/SimpleCDN.Extensions.Redis.csproj
