--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,7 +15,10 @@ on:
 
 jobs:
   unit-test:
-    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref_name }}-unit-tests
+      cancel-in-progress: true
+    runs-on: ubuntu-24.04
     name: Unit Tests
     steps:
     - uses: actions/checkout@v4
@@ -33,7 +36,10 @@ jobs:
       run: dotnet test tests/unit/SimpleCDN.Tests.Unit.csproj --no-build --verbosity normal -p:TreatWarningsAsErrors=true
 
   integration-test:
-    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref_name }}-integration-tests
+      cancel-in-progress: true
+    runs-on: ubuntu-24.04
     name: Integration Tests
     steps:
     - uses: actions/checkout@v4
