--- a/extensions/Redis/SimpleCDN.Extensions.Redis.csproj
+++ b/extensions/Redis/SimpleCDN.Extensions.Redis.csproj
@@ -30,6 +30,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Roslynator.Analyzers" Version="4.12.10">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="StackExchange.Redis" Version="2.8.24" />
 	</ItemGroup>
 
