--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -69,14 +69,16 @@ jobs:
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v4.1.0
+      if: ${{ matrix.language == 'csharp' }}
       with:
         dotnet-version: |
           8.0.x
           9.0.x
     - name: Build the project
+      if: ${{ matrix.language == 'csharp' && matrix.build-mode == 'manual' }}
       shell: bash
       run: |
-        dotnet build -c Release SimpleCDN.sln
+        dotnet build -c Release SimpleCDN.sln -p:PublishAot=false
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
