--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,6 @@ services:
     ports:
     - "1780:8080"
     environment:
-    - CDN_DATA_ROOT=/data
     - ASPNETCORE_ENVIRONMENT=Development
     - Cache__Redis__ConnectionString=redis:6379 # Only needed if Cache__Type=Redis
-    - Cache__Type=InMemory # Redis, InMemory, or Disabled
+    - Cache__Type=Redis # Redis, InMemory, or Disabled
