--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -87,8 +87,8 @@ jobs:
           outputs: type=image,"name=${{ env.DOCKER_REPO }}",push-by-digest=true,name-canonical=true,push=true
           provenance: false
           sbom: false
-          cache-to: gha,scope=image-${{ matrix.dotnet_rid }}
-          cache-from: gha,scope=image-${{ matrix.dotnet_rid }}
+          cache-to: type=gha,scope=image-${{ matrix.dotnet_rid }}
+          cache-from: type=gha,scope=image-${{ matrix.dotnet_rid }}
           build-args: |
             DOTNET_BUILD_PLATFORM=${{ matrix.dotnet_rid }}
             
