--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -107,7 +107,7 @@ jobs:
           retention-days: 1
 
   merge:
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-24.04'
     if: ${{ github.event_name != 'pull_request' }}
     needs:
       - build
