--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -28,8 +28,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: |
-          "8.0.x"
-          "9.0.x"
+          8.0.x
+          9.0.x
     - name: Pack
       run: |
         dotnet pack --configuration Release --property:Version=${VERSION#v} --output . src/core/SimpleCDN.csproj
@@ -40,7 +40,7 @@ jobs:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
 
   publish-redis-extension:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: read
       packages: write
@@ -51,8 +51,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: |
-          "8.0.x"
-          "9.0.x"
+          8.0.x
+          9.0.x
     - name: Pack
       run: |
         dotnet pack --configuration Release --property:Version=${VERSION#v} --output . extensions/Redis/SimpleCDN.Extensions.Redis.csproj
