--- a/src/standalone/Properties/launchSettings.json
+++ b/src/standalone/Properties/launchSettings.json
@@ -2,8 +2,7 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "commandLineArgs": "--data-root ..",
-      "launchBrowser": true,
+      "commandLineArgs": "--CDN:DataRoot ../..",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
