--- a/src/standalone/SimpleCDN.Standalone.csproj
+++ b/src/standalone/SimpleCDN.Standalone.csproj
@@ -36,6 +36,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+		<PackageReference Include="TomLonghurst.ReadableTimeSpan" Version="1.0.5" />
 	</ItemGroup>
 	
 	<ItemGroup>
