--- a/src/standalone/SimpleCDN.Standalone.csproj
+++ b/src/standalone/SimpleCDN.Standalone.csproj
@@ -5,7 +5,6 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-		<PublishAot>true</PublishAot>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Title>SimpleCDN</Title>
 		<Authors>JonathanBout</Authors>
@@ -31,11 +30,13 @@
 		<EventSourceSupport>false</EventSourceSupport>
 		<HttpActivityPropagationSupport>false</HttpActivityPropagationSupport>
 		<MetadataUpdaterSupport>false</MetadataUpdaterSupport>
+		<PublishAot>true</PublishAot>
 	</PropertyGroup>
 
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+		<PackageReference Include="TomLonghurst.ReadableTimeSpan" Version="1.0.5" />
 	</ItemGroup>
 	
 	<ItemGroup>
