--- a/src/standalone/SimpleCDN.Standalone.csproj
+++ b/src/standalone/SimpleCDN.Standalone.csproj
@@ -35,6 +35,7 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="AspNetCore.HealthChecks.Redis" Version="9.0.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 		<PackageReference Include="TomLonghurst.ReadableTimeSpan" Version="1.0.5" />
 	</ItemGroup>
