--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,7 @@ jobs:
         dotnet-version: |
           9.0.x
           8.0.x
+        cache: true
     - name: Restore dependencies
       run: dotnet restore tests/unit/SimpleCDN.Tests.Unit.csproj
     - name: Build
@@ -47,6 +48,7 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
+        cache: true
     - name: Restore dependencies
       run: dotnet restore tests/integration/SimpleCDN.Tests.Integration.csproj
     - name: Build
