NuGet package locking

--- a/benchmarks/SimpleCDN.Benchmarks.csproj
+++ b/benchmarks/SimpleCDN.Benchmarks.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFrameworks>net9.0;net8.0</TargetFrameworks>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\tests\mocks\SimpleCDN.Tests.Mocks.csproj" />
-	  <ProjectReference Include="..\src\core\SimpleCDN.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\tests\mocks\SimpleCDN.Tests.Mocks.csproj" />
+		<ProjectReference Include="..\src\core\SimpleCDN.csproj" />
+	</ItemGroup>
 
 </Project>
