--- a/src/core/SimpleCDN.csproj
+++ b/src/core/SimpleCDN.csproj
@@ -24,6 +24,7 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<IsAotCompatible>true</IsAotCompatible>
 		<EnableRequestDelegateGenerator>true</EnableRequestDelegateGenerator>
+		<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -43,10 +44,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Include="README.md">
-	    <Pack>True</Pack>
-	    <PackagePath>\</PackagePath>
-	  </None>
+		<None Include="README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
 
 </Project>
