--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -57,6 +57,7 @@ jobs:
       if: ${{ matrix.language == 'csharp' }}
       with:
         cache: true
+        cache-dependency-path: '**/package-lock.json'
         dotnet-version: |
           8.0.x
           9.0.x
