--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -57,7 +57,7 @@ jobs:
       if: ${{ matrix.language == 'csharp' }}
       with:
         cache: true
-        cache-dependency-path: '**/package-lock.json'
+        cache-dependency-path: '**/packages.lock.json'
         dotnet-version: |
           8.0.x
           9.0.x
