--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -27,6 +27,8 @@ jobs:
     - name: Setup Dotnet
       uses: actions/setup-dotnet@v4
       with:
+        cache: true
+        cache-dependency-path: '**/packages.lock.json'
         dotnet-version: |
           8.0.x
           9.0.x
@@ -50,6 +52,8 @@ jobs:
     - name: Setup Dotnet
       uses: actions/setup-dotnet@v4
       with:
+        cache: true
+        cache-dependency-path: '**/packages.lock.json'
         dotnet-version: |
           8.0.x
           9.0.x
