--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -56,6 +56,8 @@ jobs:
       uses: actions/setup-dotnet@v4.1.0
       if: ${{ matrix.language == 'csharp' }}
       with:
+        cache: true
+        cache-dependency-path: '**/packages.lock.json'
         dotnet-version: |
           8.0.x
           9.0.x
