--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -2,10 +2,17 @@ name: Cleanup
 on:
   delete:
   workflow_dispatch:
+  pull_request:
+    types:
+      - closed
+
+env:
+  BRANCH: ${{ github.event_type == 'pull_request' && 'refs/pull/${{ github.event.pull_request.number }}/merge' || github.event.ref }}
 
 jobs:
   cleanup:
-    if: github.event.ref_type == 'branch'
+    name: Cleanup at event ${{ github.event_name }} for branch ${{ env.BRANCH }}
+    if: github.event.ref_type == 'branch' || github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request'
     runs-on: ubuntu-24.04
     steps:
       - name: Branch Caches
@@ -24,4 +31,3 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
-          BRANCH: ${{ github.event.ref }}
